--- a/index.html
+++ b/index.html
@@ -29,81 +29,230 @@
         			</div>
         			<div class="logoPortion">
         				<img src="images/kada_logo.png" alt="logo"  />
+        				<span>Select Your Favourite category</span>
         			</div>
 				</div>
-				<div data-role="content">
-					<div class="categoryList firstDiagonal">
-						<a href="#">
-							<img src="images/organic_product.png" alt="organic" width="65" height="55" />
-							<span>Organic Products</span>
-						</a>
+				<div data-role="content" class="categoryContent">
+					<div class="firstColoumn firstRow">
+						<img src="images/breakfast.png" alt="breakfast" width="70" />
+						<span>Breakfast &amp; Cereals</span>
 					</div>
-					<div class="categoryList secondDiagonal">
-						<a href="#">
-							<img src="images/grocery.png" alt="grocery" width="65" height="55" />
-							<span>Grocery</span>
-						</a>
+					<div class="secondColoumn firstRow">
+						<ul>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/cornFlakes.png" alt="corn" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Corn Flakes
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/spread.png" alt="speed" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Speed
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/oats.png" alt="oats" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Oats
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/bread.png" alt="bread" width="24" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Bread
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/bread.png" alt="bread" width="24" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Bread
+								</span>
+							  </a>
+							</li>
+						</ul>
 					</div>
-					<div class="categoryList thirdDiagonal lastCategoryList">
-						<a href="#">
-							<img src="images/vegetables.png" alt="grocery" width="65" height="55" />
-							<span>Vegetables &amp; Fruits</span>
-						</a>
+					<div class="firstColoumn secondRow">
+						<img src="images/instantFood.png" alt="instantFood" width="40" />
+						<span>Instant Food</span>
 					</div>
-					<div class="categoryList fourthDiagonal">
-						<a href="#">
-							<img src="images/personelcare.png" alt="personalcare" width="65" height="55" />
-							<span>Personal Care</span>
-						</a>
+					<div class="secondColoumn secondRow">
+						<ul>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/insiantMix.png" alt="mix" width="8"  />
+								</span>
+								<span class="subCategoryName">
+									Instant Mix
+								</span>
+							  </a>
+							</li>
+						</ul>
 					</div>
-					<div class="categoryList firstDiagonal">
-						<a href="#">
-							<img src="images/healthcare.png" alt="healthcare" width="65" height="55" />
-							<span>Health Care</span>
-						</a>
+					<div class="firstColoumn thirdRow">
+						<img src="images/snacks.png" alt="snacks" width="50" />
+						<span>Snacks &amp; Confectionary</span>
 					</div>
-					<div class="categoryList secondDiagonal lastCategoryList">
-						<a href="#">
-							<img src="images/stationary.png" alt="stationary" width="65" height="55" />
-							<span>Stationary</span>
-						</a>
+					<div class="secondColoumn thirdRow">
+						<ul>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/creambiscuts.png" alt="biscuit" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Cream Biscuits
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/chocolates.png" alt="chocolates" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Chocolates
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/cakes.png" alt="cakes" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Cakes
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/mixture.png" alt="mixture" width="24" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Mixture
+								</span>
+							  </a>
+							</li>
+						</ul>
 					</div>
-					<div class="categoryList thirdDiagonal">
-						<a href="#">
-							<img src="images/cleaningagent.png" alt="cleaningagent" width="65" height="55" />
-							<span>Cleaning Agents</span>
-						</a>
+					<div class="firstColoumn fourthRow">
+						<img src="images/grocery.png" alt="grocery" width="50" />
+						<span>Rice &amp; Pulses</span>
 					</div>
-					<div class="categoryList fourthDiagonal">
-						<a href="#">
-							<img src="images/poojaAccessories.png" alt="poojaAccessories" width="65" height="55" />
-							<span>Pooja Accessories</span>
-						</a>
+					<div class="secondColoumn fourthRow">
+						<ul>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/cornFlakes.png" alt="corn" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Biriyani
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/spread.png" alt="speed" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Soya Chunk
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/oats.png" alt="oats" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Basmathi
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/bread.png" alt="bread" width="24" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Rice
+								</span>
+							  </a>
+							</li>
+						</ul>
 					</div>
-					<div class="categoryList firstDiagonal lastCategoryList">
-						<a href="#">
-							<img src="images/babyCare.png" alt="babyCare" width="65" height="55" />
-							<span>Baby Care</span>
-						</a>
+					<div class="firstColoumn fifthRow">
+						<img src="images/spices.png" alt="spices" width="70" />
+						<span>Spices / Masalas</span>
 					</div>
-					<div class="categoryList secondDiagonal">
-						<a href="#">
-							<img src="images/petZone.png" alt="petZone" width="65" height="55" />
-							<span>Pet Zone</span>
-						</a>
-					</div>
-					<div class="categoryList thirdDiagonal">
-						<a hhttp://localhost/projects/kadamobile/home.html#ref="#">
-							<img src="images/fish.png" alt="fish" width="65" height="55" />
-							<span>Fish And Meat</span>
-						</a>
-					</div>
-					<div class="categoryList fourthDiagonal lastCategoryList">
-						<a href="#">
-							<img src="images/others.png" alt="others" width="65" height="55" />
-							<span>Others</span>
-						</a>
-					</div>
+					<div class="secondColoumn fifthRow">
+						<ul>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/grindedSpive.png" alt="spice" width="7" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Grinded Spice
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/wholeSpice.png" alt="spice" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Whole Spice &amp; Herbs
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/masala.png" alt="masala" width="13" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Masala
+								</span>
+							  </a>
+							</li>
+							<li>
+							  <a href="#">
+								<span class="subCategoryImage">
+									<img src="images/spicesSmall.png" alt="bread" width="24" height="15" />
+								</span>
+								<span class="subCategoryName">
+									Spice
+								</span>
+							  </a>
+							</li>
+						</ul>
+					</div>	
 				</div>
 				<div data-role="footer" class="footer" data-theme="f" data-position="fixed">
 					<ul>
